# 2DStalker

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/src/: main.cpp
client/src/network/: CMakeLists.txt  Client.cpp  Client.hpp
docs/: protocol.md
scripts/: start-server.ps1
server/: CMakeLists.txt
server/src/: main.cpp
server/src/network/: CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  ConnectionWriter.cpp  ConnectionWriter.hpp  IMessageHandler.hpp  MessageChannel.cpp  MessageChannel.hpp  Server.cpp  Server.hpp  ServerMessageHandler.cpp  ServerMessageHandler.hpp  Session.cpp  Session.hpp  TcpServer.cpp  TcpServer.hpp  connection_id.hpp  network_config.hpp
server/tests/: CMakeLists.txt
server/tests/network/: CMakeLists.txt  ConnectionWriteQueueTests.cpp
server/tests/network/utils/: ConnectedSocketPair.hpp  MockMessageHandler.hpp
shared/: CMakeLists.txt
shared/src/logger/: logger.hpp
shared/src/protocol/: CMakeLists.txt  message_types.hpp
shared/src/shared/logger/: logger.hpp
shared/src/shared/network/: MessageChannel.hpp
shared/src/shared/protocol/: CMakeLists.txt  message.proto
